# 10Mi-ETL-Compare

./: .gitignore  README.md  duckdb_to_parquet.py  etl_pandas.py  etl_python_old.py  pyproject.toml  streamlit_right.py  streamlit_wrong.py
data/: measurements.parquet
